# ha-jarvis

./: .env.template  .gitignore  PROJECT_KNOWLEDGE.md  README.md  SYSTEM_SPEC.md
config/: alerts.yml  prometheus.yml
custom-software/agent-orchestrator/: Dockerfile  SPEC.md  pyproject.toml
custom-software/mcp-servers/: SPEC.md
custom_components/ha_jarvis/: __init__.py  config_flow.py  const.py  conversation.py
custom_components/ha_jarvis/translations/: en.json
ha_custom_component/: README.md  hacs.json
ha_custom_component/custom_components/ha_jarvis/: config_flow.py  const.py  conversation.py  manifest.json
ha_custom_component/custom_components/ha_jarvis/translations/: en.json
ha_custom_component/tests/: conftest.py  test_conversation.py
scripts/: backup-cron.sh  deploy.sh  generate-pihole-dns.sh  ollama-restart.sh
servers/agent/: SERVER_SPEC.md  docker-compose.yml
servers/agent/config/: litellm_config.yaml
servers/agent/config/grafana/provisioning/dashboards/: homelab-overview.json
servers/gateway/: SERVER_SPEC.md  docker-compose.yml
servers/gateway/caddy/: Caddyfile
servers/gateway/homeassistant/automations/: llm_health_check.yaml
servers/gateway/homeassistant/rest_commands/: litellm_health.yaml
servers/gateway/pihole/: custom.list
servers/gateway/traefik/: dynamic.yml
servers/inference/: SERVER_SPEC.md  docker-compose.yml
servers/nas/: SERVER_SPEC.md  docker-compose.yml
tests/: test_conversation.py
