[project]
name = "agent-orchestrator"
version = "0.1.0"
description = "LangGraph-based AI agent orchestrator for offline homelab"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "langgraph>=0.4",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "celery[redis]>=5.4",
    "qdrant-client>=1.12",
    "mem0ai>=0.1",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "websockets>=13.0",
    "mcp>=1.0",
    "prometheus-fastapi-instrumentator>=7.0",
    "structlog>=24.0",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "testcontainers[qdrant,redis]>=4.0",
    "locust>=2.30",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
